--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,60 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Pruebas</h1>
+      <input type="text" id="typePoke" placeholder="Nombre de un Pokémon"></input>
+      <button id="filterTypeButton">filtrar</button>
+      
+      <select id="select1"> 
+          <option value="Water">Agua</option> 
+          <option value="Fire">Fuego</option> 
+          <option value="Normal">Normal</option>
+          <option value="Grass">Planta</option> 
+          <option value="Electric">Eléctrico</option>
+          <option value="Ice">Hielo</option>
+          <option value="Fighting">Pelea</option> 
+          <option value="Poison">Veneno</option>
+          <option value="Ground">Tierra</option> 
+          <option value="Flying">Volador</option> 
+          <option value="Psychic">Psíquicos</option>
+          <option value="Bug">Bicho</option>
+          <option value="Rock">Roca</option>  
+          <option value="Ghost">Fantasma</option> 
+          <option value="Dragon">Dragón</option> 
+          <option value="Dark">Siniéstro</option>
+          <option value="Steel">Metal</option> 
+          <option value="Fairy">Hada</option>       
+      </select> 
+      <button id="filterTypeButton2">filtrar</button>
+
+      <div class="dropdown">
+          <button id="drop" class="dropbtn">Dropdown</button>
+          <div id="myDropdown" class="dropdown-content">
+              <option id="Water" value="Water">Agua</option> 
+              <option id="Fire" value="Fire">Fuego</option> 
+              <option id="Normal" value="Normal">Normal</option>
+              <option id="Grass" value="Grass">Planta</option> 
+              <option id="Electric" value="Electric">Eléctrico</option>
+              <option id="Ice" value="Ice">Hielo</option>
+              <option id="Fighting" value="Fighting">Pelea</option> 
+              <option id="Poison" value="Poison">Venenoso</option>
+              <option id="Ground" value="Ground">Tierra</option> 
+              <option id="Flying" value="Flying">Volador</option> 
+              <option id="Psychic" value="Psychic">Psíquicos</option>
+              <option id="Bug" value="Bug">Bicho</option>
+              <option id="Rock" value="Rock">Roca</option>  
+              <option id="Ghost" value="Ghost">Fantasma</option> 
+              <option id="Dragon" value="Dragon">Dragón</option> 
+              <option id="Dark" value="Dark">Siniéstro</option>
+              <option id="Steel" value="Steel">Metal</option> 
+              <option id="Fairy" value="Fairy">Hada</option>   
+          </div>
+        </div>
+
+      <p id="test"></p>
+      
+    </div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
