Filtrar y primera prueba de HTML dinámico

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       <button id="filterTypeButton">filtrar</button>
       
       <select id="select1"> 
+          <option value="">Tipo</option> 
           <option value="Water">Agua</option> 
           <option value="Fire">Fuego</option> 
           <option value="Normal">Normal</option>
@@ -34,30 +35,9 @@
           <option value="Fairy">Hada</option>       
       </select> 
       <button id="filterTypeButton2">filtrar</button>
-
-      <div class="dropdown">
-          <button id="drop" class="dropbtn">Dropdown</button>
-          <div id="myDropdown" class="dropdown-content">
-              <option id="Water" value="Water">Agua</option> 
-              <option id="Fire" value="Fire">Fuego</option> 
-              <option id="Normal" value="Normal">Normal</option>
-              <option id="Grass" value="Grass">Planta</option> 
-              <option id="Electric" value="Electric">Eléctrico</option>
-              <option id="Ice" value="Ice">Hielo</option>
-              <option id="Fighting" value="Fighting">Pelea</option> 
-              <option id="Poison" value="Poison">Venenoso</option>
-              <option id="Ground" value="Ground">Tierra</option> 
-              <option id="Flying" value="Flying">Volador</option> 
-              <option id="Psychic" value="Psychic">Psíquicos</option>
-              <option id="Bug" value="Bug">Bicho</option>
-              <option id="Rock" value="Rock">Roca</option>  
-              <option id="Ghost" value="Ghost">Fantasma</option> 
-              <option id="Dragon" value="Dragon">Dragón</option> 
-              <option id="Dark" value="Dark">Siniéstro</option>
-              <option id="Steel" value="Steel">Metal</option> 
-              <option id="Fairy" value="Fairy">Hada</option>   
-          </div>
-        </div>
+      <div id="contentOfCards">
+        <h3>Carta</h3>
+      </div>
 
       <p id="test"></p>
       
