Primeras funcionalidades del modal

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
           <option value="Fairy">Hada</option>       
       </select> 
       <button id="filterTypeButton2">filtrar</button>
-      <div id="contentOfCards">
+      <section id="contentOfCards">
         <h3>Carta</h3>
-      </div>
-
+      </section>
       <p id="test"></p>
+
       
     </div>
     <script type="module" src="main.js"></script>
