Cambio a Change en evento de filtrar. 09/12/19

--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,7 @@
       </select>
     </div>
     
-    <!--boton filtrar -->
-    <button id="filterTypeButton2">filtrar</button>
-
+    <!--Contenedor de las cartas -->
     <div id="contentOfCards"></div>
 
     <!--img Cahrizar --> 
