Agregado el nuevo select

--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,37 @@
       <button id="filterTypeButton">filtrar</button>
     </div>
 
-    <!--buscador por tipo -->
-
+    
     <div class="selectArea">
       <p> Filtrar Pokémon por: </p>
-      <select id="select1" class="pokeTipo">
-        <option value="">Tipo</option>
+
+      <!--buscador por tipo -->
+      <select id="selectType" class="droplists">
+        <option value="">Tipo:</option>
+        <option value="Water">Agua</option>
+        <option value="Fire">Fuego</option>
+        <option value="Normal">Normal</option>
+        <option value="Grass">Planta</option>
+        <option value="Electric">Eléctrico</option>
+        <option value="Ice">Hielo</option>
+        <option value="Fighting">Pelea</option>
+        <option value="Poison">Veneno</option>
+        <option value="Ground">Tierra</option>
+        <option value="Flying">Volador</option>
+        <option value="Psychic">Psíquicos</option>
+        <option value="Bug">Bicho</option>
+        <option value="Rock">Roca</option>
+        <option value="Ghost">Fantasma</option>
+        <option value="Dragon">Dragón</option>
+        <option value="Dark">Siniéstro</option>
+        <option value="Steel">Metal</option>
+        <option value="Fairy">Hada</option>
+      </select>
+    </div>
+
+    <!--buscador por debilidad -->
+    <select id="selectWeak" class="droplists">
+        <option value="">Debilidad a:</option>
         <option value="Water">Agua</option>
         <option value="Fire">Fuego</option>
         <option value="Normal">Normal</option>
