--- a/src/index.html
+++ b/src/index.html
@@ -76,16 +76,16 @@
         <option value="Steel">Metal</option>
         <option value="Fairy">Hada</option>
       </select>
-    </div>
+    
     
     <!--Contenedor de las cartas -->
     <div id="contentOfCards"></div>
 
-    <!--img Cahrizar --> 
+    <!--img Cahrizar 
     <div class="charizard">  
     <img src="img/charizard.png">
     </div>
-  </div>
+  </div> --> 
 
   <footer id="footer">
     <div style="font-size: 35px;">
@@ -103,6 +103,7 @@
   </footer>
 
   <script type="module" src="main.js"></script>
+  <script type="module" src="data.js"></script>
 </body>
 
 </html>
