Cambios en el select

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,7 @@
   </footer>
 
   <script type="module" src="main.js"></script>
+  <script type="module" src="data.js"></script>
 </body>
 
 </html>
