--- a/src/index.html
+++ b/src/index.html
@@ -20,16 +20,9 @@
                <a title="Home" href="index.html"><img class="pokelogo" src="img/logo.png" alt="Logo Pokepedia"></a>
          </section>
 
-    <!--buscador -->
-    <div class="searchPoke">
-         <input type="text" id="typePoke" placeholder="Nombre de tu Pokémon"></input>
-         <button id="filterTypeButton">filtrar</button>
-    </div>
-
     
     <div class="selectArea">
       <p> Filtrar Pokémon por: </p>
-
       <!--buscador por tipo -->
       <select id="selectType" class="droplists">
         <option value="">Tipo:</option>
@@ -48,17 +41,13 @@
         <option value="Rock">Roca</option>
         <option value="Ghost">Fantasma</option>
         <option value="Dragon">Dragón</option>
-        <option value="Dark">Siniéstro</option>
-        <option value="Steel">Metal</option>
-        <option value="Fairy">Hada</option>
       </select>
 
     <!--buscador por debilidad -->
-    <select id="selectWeak" class="droplists">
+      <select id="selectWeak" class="droplists">
         <option value="">Debilidad a:</option>
         <option value="Water">Agua</option>
         <option value="Fire">Fuego</option>
-        <option value="Normal">Normal</option>
         <option value="Grass">Planta</option>
         <option value="Electric">Eléctrico</option>
         <option value="Ice">Hielo</option>
@@ -76,6 +65,12 @@
         <option value="Fairy">Hada</option>
       </select>
 
+       <!--buscador -->
+      <div class="searchPoke">
+        <input type="text" id="searchBar" placeholder="Nombre de tu Pokémon"></input>
+      </div>
+    </div>
+
     <section id="contentOfCards">
          <!--img Cahrizar -->
       <div class="charizard">
@@ -91,6 +86,7 @@
            puedes buscar desde la debilidad del pokémon de tu contrincante hasta los datos de tu pokémon favorito. </p>
           <h2>Simplemente explora y encuentra!</h2>
         </div>
+    </section>
 
   <footer id="footer">
     <div style="font-size: 35px;">
