--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <div class="selectArea"> 
       <!--buscador por tipo -->
       <p> Filtrar Pokémon por: </p> 
-      <select id="selectType" class="droplists">
+      <select id="selectType"  class="droplists">
 
         <option value="">Tipo:</option>
         <option value="Water">Agua</option>
@@ -65,7 +65,7 @@
         <option value="Fairy">Hada</option>
       </select>
 
-      <input type="text" id="searchBar" class="searchClass" placeholder="Nombre de tu Pokémon"></input>
+      <input type="text" id="searchBar" class="searchClass" placeholder="Busca tu Pokémon"></input>
 
       <section id="contentOfCards">
         <!--img Cahrizar -->
