--- a/src/index.html
+++ b/src/index.html
@@ -105,8 +105,8 @@
     </span>
   </footer>
 
-  <script type="module" src="main.js"></script>
-  <script type="module" src="data.js"></script>
+  <script type="module" src="/src/main.js"></script>
+ 
 </body>
 
 </html>
