--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
     </span>
   </footer>
 
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/main.js"></script>
  
 </body>
 
