--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,8 @@
     </span>
   </footer>
 
-  <script type="module" src="/main.js"></script>
+  
+  <script  type = "module"  crossorigin = "use-credentials"  src = "main.js"> </script>
  
 </body>
 
