--- a/src/index.html
+++ b/src/index.html
@@ -105,9 +105,8 @@
     </span>
   </footer>
 
-  
-  <script  type = "module"  crossorigin = "use-credentials"  src = "main.js"> </script>
- 
+  <script type="module" src="main.js"></script>
+  <script type="module" src="data.js"></script>
 </body>
 
 </html>
