--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PokePediaGo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, user=scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <!--Fuentes / iconos/ css -->
   <script src="https://kit.fontawesome.com/7ab99cc4ec.js" class="icon" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
@@ -22,10 +21,10 @@
 
     <div class="selectArea"> 
       <!--buscador por tipo -->
-      <p> Filtrar Pokémon por: </p> 
+      <p class="text"> Filtrar Pokémon por: </p> 
       <select id="selectType"  class="droplists">
 
-        <option value="">Tipo:</option>
+        <option value="">Tipo de Pokémon:</option>
         <option value="Water">Agua</option>
         <option value="Fire">Fuego</option>
         <option value="Normal">Normal</option>
@@ -45,7 +44,7 @@
 
       <!--buscador por debilidad -->
       <select id="selectWeak" class="droplists">
-        <option value="">Debilidad a:</option>
+        <option value="">Debilidad de tu Pokémon:</option>
         <option value="Water">Agua</option>
         <option value="Fire">Fuego</option>
         <option value="Grass">Planta</option>
@@ -84,7 +83,6 @@
         </div>
       </section>
     </div>
-  </div>
   
 
   <footer id="footer">
@@ -104,9 +102,11 @@
       <p class="footerText2">Pokemon Go. All rights reserved. Barbara Di Nizca & Varinea López</p>
     </span>
   </footer>
+</div>
 
   <script type="module" src="main.js"></script>
   <script type="module" src="data.js"></script>
+
 </body>
 
 </html>
