--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
   <!--header // Banner // Logo-->
   <section id="banner">
-    <a title="Home" href="index.html"><img src="img/logo.png" alt="Logo Pokepedia"></a>
+    <a title="Home" class="imgLogo" href="index.html"><img src="img/logo.png" alt="Logo Pokepedia"></a>
   </section>
 
   <div class="container"> 
