--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,9 @@
   </section>
 
   <div class="container"> 
-
     <div class="selectArea"> 
       <!--buscador por tipo -->
-      <p class="text"> Filtrar Pokémon por: </p> 
+      <p class="text"> Filtrar por: </p> 
       <select id="selectType"  class="droplists">
 
         <option value="">Tipo de Pokémon:</option>
@@ -64,7 +63,7 @@
         <option value="Fairy">Hada</option>
       </select>
 
-      <input type="text" id="searchBar" class="searchClass" placeholder="Busca tu Pokémon"></input>
+      <input type="text" id="searchBar" class="searchClass" placeholder="Busca por nombre tu Pokémon"></input>
 
       <section id="contentOfCards">
       
@@ -77,10 +76,10 @@
         <div id="boxText" class="boxText2">
           <h1>Poképedia GO</h1>
           <p> Es una entretenida app dedicada especialmente para jugadores experimentados de Pokémon GO. </p>
-          <h2>¿De que trata?</h2>
-          <p> Aqui puedes encontrar todo lo necesario para hacer mas agradable tu aventura en Pokémon Go,
-            puedes buscar desde la debilidad del pokémon de tu contrincante hasta los datos de tu pokémon favorito. </p>
-          <h2>Simplemente explora y encuentra!</h2>
+          <h2>¿De qué trata?</h2>
+          <p> Aquí puedes encontrar todo lo necesario para hacer más agradable tu aventura en Pokémon Go,
+            puedes buscar desde la debilidad del Pokémon de tu contrincante hasta los datos de tu Pokémon favorito. </p>
+          <h2>¡Explora y encuentra!</h2>
         </div>
       </section>
     </div>
@@ -88,8 +87,7 @@
 
   <footer id="footer">
     <div style="font-size: 35px;">
-      <i class="fab fa-instagram"><span class="font-size"></span><a
-          href=" https://www.instagram.com/pokemongoapp/"></a></i>
+      <i class="fab fa-instagram"><span class="font-size"></span><a href=" https://www.instagram.com/pokemongoapp/"></a></i>
       <i class="fab fa-twitter"><span class="font-size"></span><a href="https://twitter.com/PokemonGoApp"></a></i>
       <i class="fab fa-facebook-square"><span class="font-size"></span> <a
           href="https://www.facebook.com/PokemonGO/"></a></i>
@@ -100,13 +98,13 @@
     <span class="copyright">
       <p class="footerText1"> Pokémon y los nombres de los personajes son marcas registradas de Nintendo. Durante el
         juego, ten en cuenta tu entorno y juega con seguridad.</p>
-      <p class="footerText2">Pokemon Go. All rights reserved. Barbara Di Nizca & Varinea López</p>
+      <p class="footerText2">Pokemon Go. All rights reserved. Bárbara Di Niscia & Varinea López</p>
     </span>
   </footer>
 </div>
 
-  <script type="module" src="main.js"></script>
-  <script type="module" src="data.js"></script>
+<script type="module" src="main.js"></script>
+<script type="module" src="data.js"></script>
 
 </body>
 
