--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>PokePediaGo</title>
-  <meta name="viewport" content="width=device-width, user=scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+
   <!--Fuentes / iconos/ css -->
   <script src="https://kit.fontawesome.com/7ab99cc4ec.js" class="icon" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
@@ -87,11 +88,9 @@
 
   <footer id="footer">
     <div style="font-size: 35px;">
-      <i class="fab fa-instagram"><span class="font-size"></span><a
-          href=" https://www.instagram.com/pokemongoapp/"></a></i>
+      <i class="fab fa-instagram"><span class="font-size"></span><a href=" https://www.instagram.com/pokemongoapp/"></a></i>
       <i class="fab fa-twitter"><span class="font-size"></span><a href="https://twitter.com/PokemonGoApp"></a></i>
-      <i class="fab fa-facebook-square"><span class="font-size"></span> <a
-          href="https://www.facebook.com/PokemonGO/"></a></i>
+      <i class="fab fa-facebook-square"><span class="font-size"></span> <a href="https://www.facebook.com/PokemonGO/"></a></i>
     </div>
 
     <img src="img/pikachu.png" class="pikachu">
