Cambios en el CSS

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
           <option value="Fairy">Hada</option>
         </select>
   
-        <input type="text" id="searchBar" class="searchClass" placeholder="Busca por nombre tu Pokémon"></input>
+        <input type="text" id="searchBar" class="searchClass" placeholder="Busca el nombre de tu Pokémon"></input>
       </div>
   
         <section id="contentOfCards"></section>
