Arreglos de CSS

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,11 @@
   <!--header // Banner // Logo-->
   <section id="banner">
       <a title="Home" class="imgLogo" href="index.html"><img class="imgLogo" src="img/logo.png" alt="Logo Pokepedia"></a>
-    </section>
+  </section>
   
 
     <div class="container"> 
+      <!--Área de selects e input-->
       <div class="selectArea"> 
         <!--buscador por tipo -->
         <p class="text"> Filtrar por: </p> 
@@ -63,12 +64,16 @@
           <option value="Fairy">Hada</option>
         </select>
   
+         <!-- Buscador -->
         <input type="text" id="searchBar" class="searchClass" placeholder="Busca el nombre de tu Pokémon"></input>
       </div>
-  
+
+        <!--Contendor de las cartas -->
         <section id="contentOfCards"></section>
+        
+        <!--Sección de Bienvenida -->
         <section id="welcome">
-          <!--Texto Body -->
+          <!--Texto de Bienvenida -->
           <div id="boxText" class="boxText2">
             <h1>Poképedia GO</h1>
             <p> Es una entretenida app dedicada especialmente para jugadores experimentados de Pokémon GO. </p>
