Cambios en CSS y README. 13/12/19

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
         </select>
   
          <!-- Buscador -->
-        <input type="text" id="searchBar" class="searchClass" placeholder="Busca el nombre de tu Pokémon"></input>
+        <input type="text" id="searchBar" class="searchClass" placeholder="Nombre de tu Pokémon"></input>
       </div>
 
         <!--Contendor de las cartas -->
