--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
   
         <!--buscador por debilidad -->
         <select id="selectWeak" class="droplists">
-          <option value="">Debilidad de tu Pokémon:</option>
+          <option value="">Debilidad a tipo:</option>
           <option value="Water">Agua</option>
           <option value="Fire">Fuego</option>
           <option value="Grass">Planta</option>
