lineas de color en los costados

--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,21 @@
   <link rel="icon" href="img/pokeball.jpg">
 </head>
 
-<body>
+<body>n 
+<div class="line"></div>
+<div class="line2"></div>
+
   <!--header // Banner // Logo-->
   <section id="banner">
       <a title="Home" class="imgLogo" href="index.html"><img class="imgLogo" src="img/logo.png" alt="Logo Pokepedia"></a>
   </section>
-  
-
     <div class="container"> 
       <!--Área de selects e input-->
       <div class="selectArea"> 
         <!--buscador por tipo -->
         <p class="text"> Filtrar por: </p> 
         <select id="selectType"  class="droplists">
-  
+
           <option value="">Tipo de Pokémon:</option>
           <option value="Water">Agua</option>
           <option value="Fire">Fuego</option>
@@ -89,7 +90,6 @@
           </div>
         </section>
     
-  
     <footer id="footer">
       <div style="font-size: 35px;">
         <a href=" https://www.instagram.com/pokemongoapp/" target="_blank" class="color-Icon"><i class="fab fa-instagram"></i></a>
